<resources>
    <string name="app_name">Youtube-Clone</string>
    <string name="createvideo">CreateVideo</string>
    <string name="search">Search</string>
    <string name="profile">Profile</string>
    <string name="home">Home</string>
    <string name="explore">Explore</string>
    <string name="subscription">Subscription</string>
    <string name="notification">Notification</string>
    <string name="library">Library</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="recent">Recent</string>
    <string name="history">History</string>
    <string name="downloads">Downloads</string>
    <string name="your_videos">Your videos</string>
    <string name="your_movies">Your movies</string>
    <string name="watch_later">Watch Later</string>
    <string name="new_playlist">New playlist</string>
    <string name="liked_videos">Liked videos</string>
    <string name="playlists">Playlists</string>
    <string name="do_more_with_youtube">Do more with Youtube</string>
    <string name="sign_in_now_to_upload_save_and_comment_on_videos">Sign in now to upload, save and comment on videos</string>
    <string name="sign_in">Sign In</string>
<!--    <string name="default_web_client_id">42756806581-j2hdkrrdbt1s4tbl4ptae7j329d7ombh.apps.googleusercontent.com</string>-->
</resources>