<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:title="@string/home"
        android:id="@+id/home"
        android:icon="@drawable/ic_home"
        app:showAsAction="ifRoom"/>
    <item
        android:title="@string/explore"
        android:id="@+id/explore"
        android:icon="@drawable/ic_explore"
        app:showAsAction="ifRoom"/>
    <item
        android:title="@string/subscription"
        android:id="@+id/subscription"
        android:icon="@drawable/ic_subscriptions"
        app:showAsAction="ifRoom"/>
    <item
        android:title="@string/notification"
        android:id="@+id/notification"
        android:icon="@drawable/ic_notifications"
        app:showAsAction="ifRoom"/>
    <item
        android:title="@string/library"
        android:id="@+id/library"
        android:icon="@drawable/ic_library"
        app:showAsAction="ifRoom"/>

</menu>